# UltimateTaskManager

./: .gitignore  CMakeLists.txt  README.md  run_utm.bat  setup_and_run.bat  setup_build.bat
include/core/engine/: MonitorEngine.h
include/core/model/: ProcessSnapshot.h
include/system/ntapi/: NtApi.h
include/system/process/: ProcessEnumerator.h
include/system/services/: ServiceManager.h
include/system/startup/: StartupApprovalStore.h  StartupAppsManager.h  StartupProfileDiscovery.h
include/system/users/: UserSessionManager.h
include/tools/process/: ProcessActions.h
include/ui/: HardwarePanel.h  MainWindow.h  NetworkPanel.h  PerformancePanel.h  ProcessListView.h  QuickToolsPanel.h  ServicesPanel.h  SidebarIds.h  SidebarNavigation.h  SidebarRetractable.h  StartupAppsPanel.h  StatusBar.h  UsersPanel.h
include/util/logging/: Logger.h
include/util/security/: PrivilegeManager.h
resources/: app.manifest
src/app/: main.cpp
src/core/engine/: MonitorEngine.cpp
src/system/ntapi/: NtApi.cpp
src/system/process/: ProcessEnumerator.cpp
src/system/services/: ServiceManager.cpp
src/system/startup/: StartupApprovalStore.cpp  StartupAppsManager.cpp  StartupProfileDiscovery.cpp
src/system/users/: UserSessionManager.cpp
src/tools/process/: ProcessActions.cpp
src/ui/: HardwarePanel.cpp  MainWindow.cpp  NetworkPanel.cpp  PerformancePanel.cpp  ProcessListView.cpp  QuickToolsPanel.cpp  ServicesPanel.cpp  SidebarNavigation.cpp  SidebarRetractable.cpp  StartupAppsPanel.cpp  StatusBar.cpp  UsersPanel.cpp  UsersProcessPanel.cpp
src/util/logging/: Logger.cpp
(+1 files in other folders)
